# Game-Accelerator

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: app.manifest  app.rc
src/: app.rs  main.rs
src/config/: mod.rs  settings.rs
src/core/: cpu_optimizer.rs  disk_optimizer.rs  elevation.rs  game_mode.rs  gpu_manager.rs  memory_cleaner.rs  mod.rs  power_manager.rs  process_category.rs  process_manager.rs  win_encoding.rs
src/monitor/: mod.rs  system_monitor.rs
src/ui/: dashboard.rs  gpu_page.rs  mod.rs  process_page.rs  settings_page.rs  system_opt_page.rs  theme.rs  widgets.rs
wix/: main.wxs
