[package]
name = "game-accelerator"
version = "1.0.0"
edition = "2021"
description = "Lightweight game booster for Windows"
authors = ["mi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zhang-forever/Game-Accelerator"
keywords = ["game", "booster", "windows", "performance", "optimizer"]
categories = ["gui"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
sysinfo = "0.31"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
parking_lot = "0.12"
dirs-next = "2.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
